git ignore dirty

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "vim"]
 	path = vim
 	url = git@github.com:hisea/dotvim.git
+  ignore = dirty
 [submodule "omzsh-custom"]
 	path = omzsh-custom
 	url = git@github.com:hisea/omzsh-custom.git
+  ignore = dirty
