--- a/install/Brewfile
+++ b/install/Brewfile
@@ -1,6 +1,9 @@
 brew "bat"
 brew "stow"
 brew "fd"
+brew "exa"
+brew "procs"
+brew "dust"
 brew "fzf"
 brew "git"
 brew "htop"
@@ -11,9 +14,10 @@ brew "ripgrep"
 brew "starship"
 brew "the_silver_searcher"
 brew "tig"
-brew "tldr"
+brew "tealdeer"
 brew "zsh"
 brew "zsh-completions"
 brew "rust"
 brew "zsh"
-brew "npm"
+brew "nvim"
+brew "golang"
