--- a/install/Brewfile
+++ b/install/Brewfile
@@ -1,3 +1,4 @@
+tap "adoptopenjdk/openjdk"
 brew "bat"
 brew "stow"
 brew "fd"
@@ -22,3 +23,5 @@ brew "zsh"
 brew "nvim"
 brew "golang"
 brew "clementtsang/bottom/bottom"
+brew "fnm"
+cask "adoptopenjdk11"
