--- a/install/Brewfile
+++ b/install/Brewfile
@@ -22,6 +22,6 @@ brew "rust"
 brew "zsh"
 brew "nvim"
 brew "golang"
-brew "clementtsang/bottom/bottom"
+brew "bottom"
 brew "fnm"
 cask "adoptopenjdk11"
