--- a/runcom/.tmux.conf
+++ b/runcom/.tmux.conf
@@ -1,48 +1,54 @@
-# use UTF8
-#set -g utf8
-#set-window-option -g utf8 on
-
-# make tmux display things in 256 colors
-set -g default-terminal "xterm-256color-italic"
-set-option -ga terminal-overrides ",xterm-256color-italic:Tc"
-#set -g default-terminal 'tmux-256color'
-#set -as terminal-overrides ',tmux-256color:Tc:sitm=\E[3m'
-
-# set scrollback history to 10000 (10k)
-set -g history-limit 10000
+set-option -sa terminal-overrides ",xterm*:Tc"
+set -g mouse on
 
 # set Ctrl-a as the default prefix key combination
 # and unbind C-b to free it up
 set -g prefix C-a
 unbind C-b
 
-# use send-prefix to pass C-a through to application
+# # use send-prefix to pass C-a through to application
 bind C-a send-prefix
 
 
-# shorten command delay
-set -sg escape-time 1
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
 
-# disable auto renaming of windows
-set-window-option -g automatic-rename off
 
-# set window and pane index to 1 (0 by default)
-set-option -g base-index 1
-setw -g pane-base-index 1
+set -g @catppuccin_flavour 'mocha'
+set -g @plugin 'tmux-plugins/tmp'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
-set -g focus-events on
+run '~/.tmux/plugins/tpm/tpm'
+
+
+# # shorten command delay
+# set -sg escape-time 1
+
+# # disable auto renaming of windows
+# set-window-option -g automatic-rename off
+
+# # set window and pane index to 1 (0 by default)
+# set-option -g base-index 1
+# setw -g pane-base-index 1
+
+# set -g focus-events on
 
 # reload ~/.tmux.conf using PREFIX r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # use PREFIX | to split window horizontally and PREFIX - to split vertically
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 # Make the current window the first window
 bind T swap-window -t 1
 
-# map Vi movement keys as pane movement keys
+# # map Vi movement keys as pane movement keys
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -58,17 +64,6 @@ bind J resize-pane -D 5
 bind K resize-pane -U 5
 bind L resize-pane -R 5
 
-# explicitly disable mouse control
-# brew cask install easysimbl
-
-# set -g mouse-utf8 on
-set -g mouse on
-bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
-bind -n WheelDownPane select-pane -t= \;                 send-keys -M
-# setw -g mode-mouse off
-# set -g mouse-select-pane off
-# set -g mouse-resize-pane off
-# set -g mouse-select-window off
 
 # ---------------------
 # Shell
@@ -82,63 +77,10 @@ bind < command-prompt 'set-option set-titles-string %%'
 # ---------------------
 # Copy & Paste
 # ---------------------
-# provide access to the clipboard for pbpaste, pbcopy
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-set-window-option -g automatic-rename on
-
 # use vim keybindings in copy mode
 setw -g mode-keys vi
 
 # setup 'v' to begin selection as in Vim
-bind-key -T vi-copy v send -X begin-selection
-bind-key -T vi-copy y send -X copy-pipe "reattach-to-user-namespace pbcopy"
-
-# update default binding of 'Enter' to also use copy-pipe
-unbind -T vi-copy Enter
-bind-key -T vi-copy Enter send -X copy-pipe "reattach-to-user-namespace pbcopy"
-
-bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
-bind C-y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
-
-# ----------------------
-# set some pretty colors
-# ----------------------
-# set pane colors - hilight the active pane
-set-option -g pane-border-style fg=colour235 #base02
-set-option -g pane-active-border-style fg=colour240 #base01
-
-# colorize messages in the command line
-set-option -g message-style bg=black,fg=brightred #base02
-
-# ----------------------
-# Status Bar
-# -----------------------
-set-option -g status on                # turn the status bar on
-#set -g status-utf8 on                  # set utf-8 for the status bar
-set -g status-interval 5               # set update frequencey (default 15 seconds)
-set -g status-justify centre           # center window list for clarity
-# set-option -g status-position top    # position the status bar at top of screen
-
-# visual notification of activity in other windows
-setw -g monitor-activity on
-set -g visual-activity on
-
-# set color for status bar
-set-option -g status-style bg=colour235,fg=yellow,dim #base02
-
-# set window list colors - red for active and cyan for inactive
-set-window-option -g window-status-style fg=brightblue,bg=colour236,dim #base1
-
-set-window-option -g window-status-current-style fg=brightred,bg=colour236,bright #orange
-
-# show host name and IP address on left side of status bar
-set -g status-left-length 100
-#set -g status-left "#[bg=colour235]#[fg=green]:: #S #I:#P :: #[fg=brightblue] Ⓦ #(curl icanhazip.com) #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
-set -g status-left "#[fg=colour198]:#S #I:#P: #[fg=brightblue]Ⓦ #(curl icanhazip.com) #(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #(ifconfig en3 | grep 'inet ' | awk '{print \"en3 \" $2}') #(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
-
-
-# show session name, window & pane number, date and time on right side of
-# status bar
-set -g status-right-length 100
-set -g status-right "#[fg=yellow]:: %Y-%m-%d ⧖ %H:%M :: #[fg=green]:: #H ::"
-
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
