--- a/runcom/.tmux.conf
+++ b/runcom/.tmux.conf
@@ -20,11 +20,14 @@ set-option -g renumber-windows on
 set -g @catppuccin_flavour 'mocha'
 set -g @plugin 'tmux-plugins/tmp'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+# set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'https://gitlab.com/eliobtl1/kanagawa-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 run '~/.tmux/plugins/tpm/tpm'
 
+
+set -g @kanagawa_window_tabs_enabled on
 
 # # shorten command delay
 # set -sg escape-time 1
@@ -69,7 +72,7 @@ bind L resize-pane -R 5
 # Shell
 # ---------------------
 
-set-option -g default-shell /usr/local/bin/zsh
+# set-option -g default-shell /usr/local/bin/zsh
 # enable title
 set-option -g set-titles on
 bind < command-prompt 'set-option set-titles-string %%'
