update tmux config.

--- a/runcom/.tmux.conf
+++ b/runcom/.tmux.conf
@@ -29,6 +29,8 @@ run '~/.tmux/plugins/tpm/tpm'
 
 set -g @kanagawa_window_tabs_enabled on
 
+set -g default-terminal "tmux-256color"
+
 # # shorten command delay
 # set -sg escape-time 1
 
