Update zsh plugin manager

--- a/install/Brewfile
+++ b/install/Brewfile
@@ -2,7 +2,7 @@ tap "adoptopenjdk/openjdk"
 brew "bat"
 brew "stow"
 brew "fd"
-brew "exa"
+brew "eza"
 brew "procs"
 brew "dust"
 brew "fzf"
@@ -18,9 +18,7 @@ brew "tig"
 brew "tealdeer"
 brew "zsh"
 brew "zsh-completions"
-brew "rust"
 brew "nvim"
 brew "golang"
-brew "bottom"
 brew "fnm"
-cask "adoptopenjdk11"
+brew "zoxide"
