--- a/install/Brewfile
+++ b/install/Brewfile
@@ -15,6 +15,7 @@ brew "ripgrep"
 brew "starship"
 brew "the_silver_searcher"
 brew "tig"
+brew "lazygit"
 brew "tealdeer"
 brew "zsh"
 brew "zsh-completions"
