--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,5 +1,6 @@
 font-family="JetBrainsMono Nerd Font Mono"
-font-size=14
+font-size=15
+font-style=Light
 theme=kanagawabones
 clipboard-read=allow
 clipboard-write=allow
