--- a/runcom/.gitconfig
+++ b/runcom/.gitconfig
@@ -70,20 +70,19 @@
   ;show-date = relative
   line-graphics = default ;utf-8
   tab-size = 4
-[filter "lfs"]
-	required = true
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
-	process = git-lfs filter-process
 [pager]
        diff = diff-so-fancy | less --tabs=1,5 -RFX
        show = diff-so-fancy | less --tabs=1,5 -RFX
-[gpg]
-	program = gpg
-[commit]
-	gpgsign = false
-
 [pull]
 	ff = only
 [init]
 	defaultBranch = main
+[include]
+	path = /Users/yinghaizhao/.config/dev/gitconfig
+[maintenance]
+	repo = /Users/yinghaizhao/world/trees/root/src
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
