--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,6 +1,6 @@
-font-family="JetBrainsMono Nerd Font Mono"
-font-size=15
-font-style=Light
+font-family="OperatorMono Nerd Font"
+font-size=16
+font-style=regular
 theme=kanagawabones
 clipboard-read=allow
 clipboard-write=allow
